# web-hw-7

./: README.md  config.ini  crud.py  main.py  pyproject.toml  seed.py  selects.py
migrations/versions/: 5078bedb273a_init.py
src/: models.py
